Fixed find toolbar icon size, restored original icons for places where monochrome icons look out of place
(integrated from komodo (trunk) change 76261 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@11446 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/gnome/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/gnome/_config/icons.less
@@ -1,12 +1,16 @@
-@icon-undo:                     url("chrome://komodo/skin/images/undo.png");
-
 /* Folder Icons */
 @icon-folder-open:              url("moz-icon://stock/gtk-directory?size=16");
 @icon-folder-closed:            url("moz-icon://stock/gtk-directory?size=16");
 @icon-folder-remote:            url("chrome://famfamfamsilk/skin/icons/folder_link.png");
 @icon-project:                  url("moz-icon://stock/gtk-home?size=16");
+@icon-native-folder:            url("moz-icon://stock/gtk-directory?size=16");
 
+/* Tab Icons */
 @icon-tab-select-sidebar:       url("chrome://komodo/skin/images/tab_select.png");
 @icon-tab-select-sidebar-hover: url("chrome://komodo/skin/images/select_sidebar_gnome.png");
 @icon-tab-close-button:         url("moz-icon://stock/gtk-close?size=menu");
 @icon-tab-select:               url("chrome://komodo/skin/images/alltabs-box-bkgnd-icon.png");
+
+/* Global Icons */
+@icon-help:                     url("moz-icon://stock/gtk-help?size=16");
+@icon-open-file-toolbar:        url("moz-icon://stock/gtk-open?size=16");
