--- a/src/chrome/komodo/skin/plat/mac/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/mac/_config/icons.less
@@ -3,8 +3,14 @@
 @icon-folder-closed:            url("chrome://global/skin/dirListing/folder.png");
 @icon-folder-remote:            url("chrome://famfamfamsilk/skin/icons/folder_link.png");
 @icon-project:                  url('chrome://komodo/skin/images/project_icon.png');
+@icon-native-folder:            url("chrome://global/skin/dirListing/folder.png");
 
+/* Tab Icons */
 @icon-tab-select-sidebar:       url("chrome://komodo/skin/images/select_sidebar_mac.png");
 @icon-tab-select-sidebar-hover: url("chrome://komodo/skin/images/select_sidebar_mac_hover.png");
 @icon-tab-close-button:         none;
 @icon-tab-select:               url("chrome://komodo/skin/images/alltabs-box-bkgnd-icon.png");
+
+/* Global icons */
+@icon-warning:                  url("chrome://global/skin/icons/warning-large.png");
+@icon-question:                 url("chrome://global/skin/icons/alert-question.gif");
