--- a/src/chrome/komodo/skin/plat/shared/_config/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/icons.less
@@ -33,19 +33,19 @@
 @icon-tab-select:               url("chrome://fugue/skin/icons/arrow-270-small.png");
 
 /* Global */
-@icon-folder-up:                url("chrome://icomoon/skin/icons/svg/folder-upload.svg");
-@icon-newfolder:                url("chrome://icomoon/skin/icons/svg/folder-plus.svg");
-@icon-refresh:                  url("chrome://icomoon/skin/icons/svg/loop5.svg");
-@icon-goback:                   url("chrome://icomoon/skin/icons/svg/backward2.svg");
-@icon-warning:                  url("chrome://icomoon/skin/icons/svg/warning2.svg");
-@icon-small-warning:            url("chrome://icomoon/skin/icons/svg/warning2.svg");
-@icon-question:                 url("chrome://icomoon/skin/icons/svg/question2.svg");
-@icon-help:                     url("chrome://icomoon/skin/icons/svg/support.svg");
-@icon-more:                     url("chrome://icomoon/skin/icons/svg/arrow-down2.svg");
-@icon-less:                     url("chrome://icomoon/skin/icons/svg/arrow-up2.svg");
-@icon-arrow-right-6x3:          url("chrome://icomoon/skin/icons/svg/arrow-right3.svg");
-@icon-server-pref:              url("chrome://icomoon/skin/icons/svg/cog.svg");
-@icon-preview:                  url("chrome://icomoon/skin/icons/svg/profile.svg");
+@icon-folder-up:                url("chrome://komodo/skin/global/images/upLevel.png");
+@icon-newfolder:                url("chrome://komodo/skin/global/images/newDirectory.png");
+@icon-refresh:                  url("chrome://komodo/skin/global/images/refresh.png");
+@icon-goback:                   url("chrome://komodo/skin/global/images/goBack.png");
+@icon-warning:                  url("chrome://global/skin/icons/Warning.png");
+@icon-small-warning:            url("chrome://komodo/skin/global/images/warning_small.png");
+@icon-question:                 url("chrome://global/skin/icons/Question.png");
+@icon-help:                     url("chrome://komodo/skin/images/help.png");
+@icon-more:                     url("chrome://komodo/skin/images/more.gif");
+@icon-less:                     url("chrome://komodo/skin/images/less.gif");
+@icon-arrow-right-6x3:          url("chrome://komodo/skin/images/arrow_right_6x3.png");
+@icon-server-pref:              url("chrome://komodo/skin/global/images/serverAccount.png");
+@icon-preview:                  url("chrome://komodo/skin/global/images/preview.png");
 @icon-refreshFile:              url("chrome://komodo/skin/global/images/refreshFile.png");
 @icon-configure:                url("chrome://komodo/skin/global/images/cog_edit.png");
 @icon-properties:               url("chrome://komodo/skin/global/images/cog.png");
@@ -74,6 +74,7 @@
 @icon-new-file:                 url("chrome://icomoon/skin/icons/svg/file-plus2.svg");
 @icon-new-window:               url("chrome://komodo/skin/images/komodo_16x16.png");
 @icon-open-file:                url("chrome://icomoon/skin/icons/svg/folder-open.svg");
+@icon-open-file-toolbar:        url("chrome://global/skin/dirListing/folder.png");
 @icon-native-folder:            url("chrome://global/skin/dirListing/folder.png");
 @icon-project-tools:            url("chrome://fugue/skin/icons/gear.png");
 @icon-new-template:             url("chrome://komodo/skin/images/newTemplate.png");
@@ -129,6 +130,7 @@
 @icon-tabpicker:                url("chrome://icomoon/skin/icons/svg/menu6.svg");
 @icon-find:                     url("chrome://icomoon/skin/icons/svg/binoculars.svg");
 @icon-find-in-files:            url("chrome://icomoon/skin/icons/svg/binoculars.svg");
+@icon-find-toolbar:             url("chrome://komodo/skin/images/find.png");
 @icon-previous-diff:            url("chrome://icomoon/skin/icons/svg/arrow-up16.svg");
 @icon-next-diff:                url("chrome://icomoon/skin/icons/svg/arrow-down16.svg");
 @icon-reveal-in-editor:         url("chrome://icomoon/skin/icons/svg/file.svg");
